Makefile.am: mkdir data/domains to avoid buildir!=srcdir build problem
https://bugzilla.gnome.org/show_bug.cgi?id=757139

--- a/Makefile.am
+++ b/Makefile.am
@@ -315,6 +315,7 @@ data/domains/yelp.pot: data/domains/yelp.xml.in
 
 data/domains/yelp.xml: data/domains/yelp.xml.in
 	$(AM_V_GEN) ( \
+	$(MKDIR_P) data/domains; \
 	for lang in $(ALL_LINGUAS); do \
 	  msgfmt -o "$$lang.mo" "$(top_srcdir)/po/$$lang.po" || exit 1; \
 	done; \
