--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 .libs
 Makefile
 Makefile.in
+yelp
 
 /INSTALL
 /aclocal.m4
@@ -44,6 +45,7 @@ Makefile.in
 /yelp.desktop.in
 
 /data/org.gnome.yelp.gschema.valid
+/data/domains/yelp.xml
 /data/dtd/catalog
 /data/xslt/db2html.xsl
 /data/xslt/info2html.xsl
