Update .gitignore for nonrecursive build

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ Makefile.in
 /intltool-update.in
 /libtool
 /stamp-h1
+/yelp
 /yelp.desktop
 /yelp.desktop.in
 
@@ -88,8 +89,6 @@ Makefile.in
 /po/POTFILES
 /po/stamp-it
 /po/yelp.pot
-
-/src/yelp
 
 /tests/test-bz2
 /tests/test-io-channel
