Add help to list of desktop file keywords
https://bugzilla.gnome.org/show_bug.cgi?id=764322

--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Help
 _Comment=Get help with GNOME
-_Keywords=documentation;information;manual;
+_Keywords=documentation;information;manual;help;
 OnlyShowIn=GNOME;Unity;
 Exec=yelp %u
 Icon=help-browser
