search-provider: add search provider
https://bugzilla.gnome.org/show_bug.cgi?id=690058

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,11 @@ yelp
 /po/stamp-po
 /po/yelp.pot
 
+/search-provider/org.gnome.Yelp.SearchProvider.service
+/search-provider/yelp-shell-search-provider-generated.c
+/search-provider/yelp-shell-search-provider-generated.h
+/search-provider/yelp-search-provider
+
 /tests/test-bz2
 /tests/test-io-channel
 /tests/test-location-entry
