search-provider: add search provider
https://bugzilla.gnome.org/show_bug.cgi?id=690058

--- a/configure.ac
+++ b/configure.ac
@@ -164,6 +164,7 @@ data/xslt/man2html.xsl
 data/xslt/yelp-common.xsl
 org.gnome.Yelp.desktop.in
 po/Makefile.in
+search-provider/Makefile
 ])
 
 AC_OUTPUT
