--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,11 @@ yelp
 /po/stamp-it
 /po/yelp.pot
 
+/search-provider/org.gnome.Yelp.SearchProvider.service
+/search-provider/yelp-shell-search-provider-generated.c
+/search-provider/yelp-shell-search-provider-generated.h
+/search-provider/yelp-search-provider
+
 /tests/test-bz2
 /tests/test-io-channel
 /tests/test-location-entry
