Make application D-Bus launchable
Changing the application to be launchable from D-Bus,
we needed to rename desktop file according to yelp application ID.
Also add the yelp service file and add --gapplication-service flag to it.

https://bugzilla.gnome.org/show_bug.cgi?id=690058

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ yelp
 /libtool
 /stamp-h1
 /yelp
-/yelp.desktop
-/yelp.desktop.in
+/org.gnome.Yelp.desktop
+/org.gnome.Yelp.desktop.in
+/org.gnome.Yelp.service
 
 /data/org.gnome.yelp.gschema.valid
 /data/domains/yelp.xml
