--- a/Makefile.am
+++ b/Makefile.am
@@ -281,7 +281,7 @@ install-exec-hook:
 @INTLTOOL_DESKTOP_RULE@
 
 desktopdir = $(datadir)/applications
-desktop_in_files=yelp.desktop.in.in
+desktop_in_files=org.gnome.Yelp.desktop.in.in
 desktop_DATA = $(desktop_in_files:.desktop.in.in=.desktop)
 
 @INTLTOOL_XML_RULE@
@@ -679,6 +679,13 @@ dist_mjoutputnativemml_DATA = \
 	data/mathjax/jax/output/NativeMML/config.js \
 	data/mathjax/jax/output/NativeMML/jax.js
 
+servicedir = $(datadir)/dbus-1/services
+service_DATA = $(service_in_files:.service.in=.service)
+service_in_files = org.gnome.Yelp.service.in
+
+org.gnome.Yelp.service: org.gnome.Yelp.service.in Makefile
+	$(AM_V_GEN) sed -e "s|\@bindir\@|$(bindir)|" $< > $@
+
 xsldir = $(pkgdatadir)/xslt
 
 xsl_DATA = \
@@ -869,7 +876,8 @@ CLEANFILES = \
 	$(appstream_XML) \
 	$(desktop_DATA) \
 	$(enum_data) \
-	$(marshal_data)
+	$(marshal_data) \
+	org.gnome.Yelp.service
 
 MAINTAINERCLEANFILES = \
 	build-aux/compile \
@@ -889,5 +897,7 @@ AM_DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-bz2 \
 	--enable-gtk-doc \
 	--enable-lzma
+
+EXTRA_DIST = $(service_in_files)
 
 .PHONY: docs
