--- a/configure.ac
+++ b/configure.ac
@@ -162,8 +162,8 @@ data/xslt/info2html.xsl
 data/xslt/mal2html.xsl
 data/xslt/man2html.xsl
 data/xslt/yelp-common.xsl
+org.gnome.Yelp.desktop.in
 po/Makefile.in
-yelp.desktop.in
 ])
 
 AC_OUTPUT
