Make application D-Bus launchable
Changing the application to be launchable from D-Bus,
we needed to rename desktop file according to yelp application ID.
Also add the yelp service file and add --gapplication-service flag to it.

https://bugzilla.gnome.org/show_bug.cgi?id=690058

--- a/Makefile.am
+++ b/Makefile.am
@@ -279,8 +279,8 @@ install-exec-hook:
 	$(LN_S) yelp $(DESTDIR)$(bindir)/gnome-help
 
 desktopdir = $(datadir)/applications
-desktop_DATA = yelp.desktop
-yelp.desktop: ${srcdir}/yelp.desktop.in
+desktop_DATA = org.gnome.Yelp.desktop
+org.gnome.Yelp.desktop: ${srcdir}/org.gnome.Yelp.desktop.in
 	$(AM_V_GEN)$(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
 
 data/yelp.appdata.xml: ${srcdir}/data/yelp.appdata.xml.in
@@ -684,6 +684,13 @@ dist_mjoutputnativemml_DATA = \
 	data/mathjax/jax/output/NativeMML/config.js \
 	data/mathjax/jax/output/NativeMML/jax.js
 
+servicedir = $(datadir)/dbus-1/services
+service_DATA = $(service_in_files:.service.in=.service)
+service_in_files = org.gnome.Yelp.service.in
+
+org.gnome.Yelp.service: org.gnome.Yelp.service.in Makefile
+	$(AM_V_GEN) sed -e "s|\@bindir\@|$(bindir)|" $< > $@
+
 xsldir = $(pkgdatadir)/xslt
 
 xsl_DATA = \
@@ -698,7 +705,7 @@ dist_noinst_DATA = \
 	$(libyelp_libyelp_la_headers) \
 	$(noinst_libyelp_libyelp_la_headers) \
 	$(yelp_headers) \
-	yelp.desktop.in \
+	org.gnome.Yelp.desktop.in \
 	data/yelp.appdata.xml.in \
 	data/domains/yelp.pot \
 	data/domains/yelp.xml.in \
@@ -874,7 +881,8 @@ CLEANFILES = \
 	$(appstream_XML) \
 	$(desktop_DATA) \
 	$(enum_data) \
-	$(marshal_data)
+	$(marshal_data) \
+	org.gnome.Yelp.service
 
 MAINTAINERCLEANFILES = \
 	build-aux/compile \
@@ -894,5 +902,7 @@ AM_DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-bz2 \
 	--enable-gtk-doc \
 	--enable-lzma
+
+EXTRA_DIST = $(service_in_files)
 
 .PHONY: docs
