--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ yelp
 /libtool
 /stamp-h1
 /yelp
-/yelp.desktop
+/org.gnome.Yelp.desktop
+/org.gnome.Yelp.service
 
 /data/org.gnome.yelp.gschema.valid
 /data/domains/yelp.xml
