--- a/data/xslt/yelp-common.xsl.in
+++ b/data/xslt/yelp-common.xsl.in
@@ -59,30 +59,47 @@
   <xsl:param name="left"/>
   <xsl:param name="right"/>
 <xsl:text>
-html {
-  height: 100%;
+h1 {
+  font-weight: normal;
+  font-size: 2.4em;
 }
-body {
-  padding: 0;
-  background-color: </xsl:text><xsl:value-of select="$color.background"/><xsl:text>;
-  max-width: 100%;
+div.title-heading h2, h2 {
+  font-weight: normal;
+  font-size: 2em;
 }
-div.page {
-  border: none;
-  margin: 0;
-  width: 100%;
-  max-width: 100%;
+div.links-heading a {
+  font-weight: normal;
+  font-size: 2em;
 }
-div.header {
-  max-width: 100%;
-  width: 100%;
-  padding: 0;
-  margin: 0 auto 1em auto;
+a.linkdiv span.title {
+  font-weight: normal;
+  font-size: 1.2em;
 }
-div.body, div.footer {
-  margin: 0;
-  max-width: 60em;
+header {
+  background-color: </xsl:text>
+  <xsl:value-of select="$color.bg.gray"/><xsl:text>;
+  border-bottom: solid 1px </xsl:text>
+  <xsl:value-of select="$color.bg.dark"/><xsl:text>;
 }
+footer {
+  background-color: </xsl:text>
+  <xsl:value-of select="$color.bg.gray"/><xsl:text>;
+  border-top: solid 1px </xsl:text>
+  <xsl:value-of select="$color.bg.dark"/><xsl:text>;
+}
+footer footer { border-top: none; }
+a.trail { color:  </xsl:text>
+  <xsl:value-of select="$color.fg.dark"/><xsl:text>; }
+a.trail:hover { text-decoration: none; color:  </xsl:text>
+  <xsl:value-of select="$color.fg.blue"/><xsl:text>; }
+</xsl:text>
+</xsl:template>
+
+<xsl:template name="html.css.custom.x">
+  <xsl:param name="direction"/>
+  <xsl:param name="left"/>
+  <xsl:param name="right"/>
+<xsl:text>
 div.code {
   -webkit-box-shadow: 0px 0px 4px </xsl:text><xsl:value-of select="$color.gray_border"/><xsl:text>;
 }
@@ -90,32 +107,6 @@ div.code:hover {
   -webkit-box-shadow: 0px 0px 4px </xsl:text><xsl:value-of select="$color.blue_border"/><xsl:text>;
 }
 div.synopsis div.code, div.synopsis div.code:hover { -webkit-box-shadow: none; }
-div.trails {
-  margin: 0;
-  padding: 0.2em 12px 0 12px;
-  background-color: </xsl:text>
-    <xsl:value-of select="$color.gray_background"/><xsl:text>;
-  border-bottom: solid 1px </xsl:text>
-    <xsl:value-of select="$color.gray_border"/><xsl:text>;
-}
-div.trail {
-  font-size: 1em;
-  margin: 0 1em 0.2em 1em;
-  padding: 0;
-}
-@media only screen and (max-width: 400px) {
-  div.trails {
-    padding-left: 6px;
-    padding-right: 6px;
-  }
-}
-a.trail { color:  </xsl:text>
-  <xsl:value-of select="$color.text_light"/><xsl:text>; }
-a.trail:hover { text-decoration: none; color:  </xsl:text>
-  <xsl:value-of select="$color.link"/><xsl:text>; }
-.current-location-hash div.hgroup {
-  background-color: </xsl:text><xsl:value-of select="$color.gray_background"/><xsl:text>
-}
 </xsl:text>
 <xsl:call-template name="yelp.css.custom"/>
 </xsl:template>
