--- a/data/yelp.appdata.xml.in
+++ b/data/yelp.appdata.xml.in
@@ -24,6 +24,8 @@
   </screenshots>
   <url type="homepage">https://wiki.gnome.org/Apps/Yelp</url>
   <updatecontact>gnome-doc-devel-list@gnome.org</updatecontact>
+  <project_group>GNOME</project_group>
+  <compulsory_for_desktop>GNOME</compulsory_for_desktop>
   <translation type="gettext">yelp</translation>
   <_developer_name>The GNOME Project</_developer_name>
 </application>
