--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -4,7 +4,7 @@ _Comment=Get help with GNOME
 _Keywords=documentation;information;manual;help;
 OnlyShowIn=GNOME;Unity;
 Exec=yelp %u
-Icon=help-browser
+Icon=org.gnome.Yelp
 StartupNotify=true
 Terminal=false
 Type=Application
