app-id: unify app-id & improving the appdata
following the new freedesktop standards per the specs
https://freedesktop.org/software/appstream/docs/chap-Quickstart.html

--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,9 @@ yelp
 /libtool
 /stamp-h1
 /yelp
-/yelp.desktop
-/yelp.desktop.in
+/data/org.gnome.Yelp.desktop
 
-/data/org.gnome.yelp.gschema.valid
+/data/org.gnome.Yelp.gschema.valid
 /data/domains/yelp.xml
 /data/dtd/catalog
 /data/xslt/db2html.xsl
