--- a/configure.ac
+++ b/configure.ac
@@ -163,7 +163,7 @@ data/xslt/mal2html.xsl
 data/xslt/man2html.xsl
 data/xslt/yelp-common.xsl
 po/Makefile.in
-yelp.desktop.in
+data/org.gnome.Yelp.desktop.in
 ])
 
 AC_OUTPUT
