--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,7 +2,8 @@
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
 data/domains/yelp.pot
-data/yelp.appdata.xml.in
+data/org.gnome.Yelp.appdata.xml.in
+data/org.gnome.Yelp.desktop.in.in
 libyelp/yelp-bz2-decompressor.c
 libyelp/yelp-debug.c
 libyelp/yelp-docbook-document.c
@@ -23,4 +24,3 @@ libyelp/yelp-view.c
 src/yelp-application.c
 src/yelp-window.c
 src/yelp.c
-yelp.desktop.in.in
