Appdata: add provides id tag
Used to link the new id to the old one on GNOME Software and other software centers

--- a/data/org.gnome.Yelp.appdata.xml.in
+++ b/data/org.gnome.Yelp.appdata.xml.in
@@ -25,6 +25,9 @@
       <_caption><!-- Describe this screenshot in less than ~10 words --></_caption>
     </screenshot>
   </screenshots>
+  <provides>
+    <id>yelp.desktop</id>
+  </provides>
   <url type="homepage">https://wiki.gnome.org/Apps/Yelp</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/yelp</url>
   <url type="donation">http://www.gnome.org/friends/</url>
