Simplify desktop file generation
Desktop file was processed twice - by the configure script and by
intltool. Configure was putting a yelp version to some
bugzilla-related value. Bugzilla is an obsolete bug tracker in GNOME
(the project has moved to GNOME gitlab), so the field is also
obsolete. With dropping the fields, configure has no business in the
desktop file any more.

--- a/Makefile.am
+++ b/Makefile.am
@@ -281,8 +281,8 @@ install-exec-hook:
 @INTLTOOL_DESKTOP_RULE@
 
 desktopdir = $(datadir)/applications
-desktop_in_files=yelp.desktop.in.in
-desktop_DATA = $(desktop_in_files:.desktop.in.in=.desktop)
+desktop_in_files=yelp.desktop.in
+desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 @INTLTOOL_XML_RULE@
 
