--- a/configure.ac
+++ b/configure.ac
@@ -50,8 +50,8 @@ AC_SUBST(YELP_EXTENSION_CFLAGS)
 AC_SUBST(YELP_EXTENSION_LIBS)
 
 # i18n stuff
-AX_REQUIRE_DEFINED([IT_PROG_INTLTOOL])
-IT_PROG_INTLTOOL([0.41.0])
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.19.8])
 
 ALL_LINGUAS="`grep -v '^#' "$srcdir/po/LINGUAS" | tr '\n' ' '`"
 AC_SUBST(ALL_LINGUAS)
