Add translator comments to the .desktop file
So that Damned Lies ignores icons, see
https://gitlab.gnome.org/Infrastructure/damned-lies/issues/142

--- a/yelp.desktop.in
+++ b/yelp.desktop.in
@@ -1,9 +1,11 @@
 [Desktop Entry]
 Name=Help
 Comment=Get help with GNOME
+# Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=documentation;information;manual;help;
 OnlyShowIn=GNOME;Unity;
 Exec=yelp %u
+# Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=org.gnome.Yelp
 StartupNotify=true
 Terminal=false
