--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ PKG_CHECK_MODULES(YELP,
 	gio-unix-2.0
 	gtk+-unix-print-3.0
 	gtk+-3.0 >= 3.13.3
+        libhandy-1 >= 1.0.0
 	libxml-2.0 >= 2.6.5
 	libxslt >= 1.1.4
 	libexslt >= 0.8.1
